syntax = "proto3";

package auth;

service UserService {
    rpc Create (CreateUserDto) returns (User) {}
    rpc FindAll (Empty) returns (Users) {}
    rpc FindOne (FindOneUserDto) returns (User) {}
    rpc Update (UpdateUserDto) returns (User) {}
    rpc Remove (FindOneUserDto) returns (Empty) {}
    rpc Query (stream PaginationDto) returns (stream Users) {}
}

message Empty {}

message Users {
    repeated User users = 1;
}

message PaginationDto {
    int32 page = 1;
    int32 skip = 2;
}

message CreateUserDto {
    string name = 1;
    string password = 2;
    int32 age = 3;
}

message UpdateUserDto {
    string id = 1;
    SocialMedia social_media = 2;
}

message FindOneUserDto {
    string id = 1;
}

message User {
    string id = 1;
    string name = 2;
    string password = 3;
    int32 age = 4;
    bool subscribed = 5;
    SocialMedia social_media = 6;
}

message SocialMedia {
    optional string twitter_uri = 1;
    optional string fb_uri = 2;
}
